--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "@ai-sdk/openai": "^0.0.60",
     "@pinecone-database/doc-splitter": "^0.0.1",
     "@pinecone-database/pinecone": "^3.0.3",
+    "@tanstack/react-query": "^5.62.7",
+    "@wagmi/connectors": "^5.6.1",
+    "@wagmi/core": "^2.16.0",
     "ai": "^3.3.39",
     "cheerio": "^1.0.0",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "14.2.11",
     "md5": "^2.3.0",
     "next": "^14.2.11",
     "node-html-markdown": "^1.3.0",
@@ -29,9 +34,9 @@
     "tailwindcss": "3.4.11",
     "typescript": "5.6.2",
     "unified": "^11.0.5",
+    "viem": "^2.21.55",
     "vue": "^3.5.6",
-    "eslint": "^8.0.0",
-    "eslint-config-next": "14.2.11"
+    "wagmi": "^2.14.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.47.1",
